# A-foundation-credit-model

./: .gitignore  .gitignore_global  README.md
deep-loans/: CONTRIBUTING.md  cla.md  pytest.ini
deep-loans/api/api-backend-main/: LICENSE  docker-compose.yaml  openapi.json  readme.md
deep-loans/etl-pipelines/: readme.md
deep-loans/etl-pipelines/ESMA-Loan-level-data-templates/: annex5_underlying_exposures-automobile.xlsx  validation_rules_ESMA.txt
deep-loans/etl-pipelines/common_components/: README.md
deep-loans/mcp-server/: README.md  pyproject.toml
deep-loans/mcp-server/deeploans_mcp/: __init__.py  server.py
deep-loans/mcp-server/tests/: test_server.py
deep-loans/synthetic-data-designer/: COLUMN_GLOSSARY.md  PORTFOLIO_STATS.md  README.md  RUN_PLAN.md  age_to_panel.py  compute_stats.py  data_designer_loan_book.py  run.py
deep-loans/synthetic-data-designer/tests/: README.md  run_sql_tests.py  test_panel.sql
docs/: governance_and_demo_readiness.md  literature_research_and_improvements.md  sequence_diagram.puml
src/credit-foundation-model/: app.py  readme.md  requirements.txt
src/credit-foundation-model/embeddings-to-downstream/: downstream_eval.py
src/credit-foundation-model/pipelines/: baseline_model.py  db_schema.sql  ingest_bronze.py  validate_gold.py
src/credit-foundation-model/tokenize-sequences-app/: build_sequences.py  sequence_dataset.py  tokenizer.py
src/credit-foundation-model/train-foundation-model/: config.py  dataset.py  nemo_config.yaml  run_manager.py  train_foundation.py  trainer.py
src/credit-foundation-model/ui/: app.js  (+2 more)
(+172 files in other folders)
